@@ -61,6 +61,7 @@ set /p APPVER=<"%~dp0build\app\current.txt"
 "%JAVA_HOME%\bin\javaw.exe" ^
     -Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8 ^
     -Dsun.stdout.encoding=UTF-8 -Dsun.stderr.encoding=UTF-8 -DCONSOLE_CHARSET=UTF-8 ^
+    --add-opens=java.desktop/java.awt.event=ALL-UNNAMED ^
     -Dbylins.plugins.dir=build/app/%APPVER%/plugins ^
     -Dbylins.plugins.data.dir="%USERPROFILE%\.bylins-client\plugins" ^
     -cp "%~dp0build\app\deps\*;%~dp0build\app\%APPVER%\lib\*" com.bylins.client.MainKt
